2016-03-30 Simon Pfreundschuh  <simonpf@chalmers.se>

	Exchanged old OEM implementation against invlib
	(github.com/simonpf/invlib) library. Successfully built
	with g++-5.2 and clang++-3.7.

	* arts-2-3-465

	* 3rdparty/invlib/* Generic implementation of MAP estimators.

	* CMakeLists.txt: Added check for C++11 support that disables oem
	functions if C++11 is not supported.

	* src/CMakeLists.txt: Conditional compilation of m_oem. Added compile
	flags for m_oem.cc and test_oem.cc.

	* src/methods.cc: Conditional compilation of m_oem and m_x2arts.

	* src/oem.h: Completely rewritten. Now only contains type aliases for
	for invlib generic types.

	* src/oem.cc: Removed.

	* src/test_oem.cc: Adapted tests to new OEM implementation.

	* src/test_oem/test_oem_levenberg_marquardt.m: Fixed atmlab call.

2016-03-28  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-464

	* src/matpackII.* (insert_vector):
	Added function to efficiently insert vector of unsorted elements into
	sparse matrices.

	* src/xml_io_basic_types.cc (xml_read_from_stream(..., Sparse& , ...))
	Changed read function for Sparse to use insert_vector function.

2016-03-27  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-463

	* src/matpackII.* (transpose_multiply):
	Added a function to multiply the transpose of a matrix with a vector
	without the need to explicitly compute the tranpose.

	* src/test_sparse.cc (test_sparse_multiplication) Added test for new
	multiplication function.

	* src/matpackI.h (Vector): Added transpose_multiply to friends
	declaration.

	* src/matpackI.cc (mult): Fixed input parameter to dgemv when multiplying
	a transposed matrix consisting only of one row/column.

	* src/test_matpack.cc (test_matrix_vector_multiplication) Refined test
	to catch above corner case.

2016-03-21 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-463

	* src/m_refraction.cc, methods.cc (complex_refr_indexIceMatzler06):